# OSW

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICES  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
localdictate/: __init__.py  __main__.py  autostart.py  cache.py  engine.py  hotkey.py  settings.py  state.py  ui.py
osw/: __init__.py  __main__.py  engine.py  hotkey.py  settings.py  ui.py
tests/: test_controller.py  test_engine.py  test_hotkey.py  test_settings.py
