[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "osw"
version = "0.1.0"
description = "Open Source Whisper — hold a hotkey, speak, release. Text appears."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.0",
    "numpy",
    "PySide6-Essentials>=6.5.0",
    "platformdirs>=3.0.0",
    "pynput>=1.7.0",
]

[project.scripts]
osw = "osw.__main__:main"

[project.urls]
Homepage = "https://github.com/Gustavjiversen01/OSW"
